2003-08-30  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scm/music-functions.scm (remove-tag): filter \tagged music
	expressions.

	* input/regression/tag-filter.ly (texidoc): new file.

	* lily/parser.yy (post_event): add \tag #'symbol / \tag #'(symbol1
	symbol2 .. ) etc. 

	* scripts/convert-ly.py (FatalConversionError.conv): fingering
	convert rule.

	* Documentation/user/refman.itely (Fingering instructions): adjust manual.

	* lily/new-fingering-engraver.cc (position_scripts): don't crash
	for borderline cases (e.g. 1 fingering.)
	(position_scripts): revise interface, use fingerOrientations to
	set fingering positions.

	* scm/document-translation.scm (context-doc): add aliases to
	automated documentation.

	* make/lilypond-vars.make: remove stepmake compat glue.

	* make/generic-vars.make: remove cruft.

	* lily/main.cc (main): don't identify binary.

2003-08-29  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/include/translator.hh (class Translator): remove
	type_string_ , use symbol for context name throughout.
	Changes through whole source tree.

	* scripts/lilypond.py: rename ly2dvi.py to lilypond.py
	set PDF as default, and always make PDF.

	* lily/GNUmakefile (SUBDIRS): rename binary to lilypond-bin

2003-08-29  Heikki Junes  <hjunes@cc.hut.fi>

	* ChangeLog lilypond.words Documentation/topdocs/NEWS.texi
	Documentation/user/refman.itely input/regression/allfontstyle.ly
	input/regression/grace-types.ly:
	fix spelling for acciaccatura (Webster's 1913).

2003-08-29  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/main.cc (usage): adjust blurb, include url.

	* input/regression/breathing-sign.ly (texidoc): transpose up

2003-08-28  Juergen Reuter  <reuter@ipd.uka.de>

	* input/regression/breathing-sign.ly: changed ancient examples to
	be relevant (by request of Han-Wen); updated BreathingSign text
	property according to new syntax.

	* ly/gregorian-init.ly: updated BreathingSign text property
	according to new syntax

2003-08-28  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
