@@ -23,9 +23,4 @@ endif
 HELP2MAN_COMMAND = $(PERL) $(builddir)/buildscripts/$(outbase)/help2man $< > $@
 
 $(outdir)/%.1: $(outdir)/%
-	@echo "generating man page from $< --help"
-	@echo "$(HELP2MAN_COMMAND)"
-	@$(HELP2MAN_COMMAND) || \
-	(echo ""; echo "Apparently the man pages failed to build. This is";\
-	echo "no problem, since they don't contain any information anyway.";\
-	echo "Please run make again, and be prepared for NO manual pages.")
+	$(HELP2MAN_COMMAND)
